--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -53,7 +53,7 @@
         </form>
       </tab>
       <tab heading= 'Edit Photos'>
-        <h4>Edit Photos will come in here</h4>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
